# AprilAssay

./: CLAUDE.md  CMakeLists.txt  README.md  rebuild.sh  run.sh  setup.sh  sweep.sh
.claude/: settings.json
docs/: AprilTag Sensor Characterization Plan.docx  AptilTag Sensor Characterization Plan.docx
scripts/: sweep_summary.py
src/: camera.h  capture_libcamera.cpp  capture_v4l2.cpp  vision.cpp
